texts/transforms/html/rich/components/verse_style.css
.verses {
  list-style: none;
  margin: 0;
  padding: 0;
}

body:not(.simple-verse-style) .verse {
  position: relative;
  padding: .5rem .75rem;
}

body:not(.simple-verse-style) .verse:nth-child(odd) {
  background: hsl(220 20% 97%);
}

body:not(.simple-verse-style) .verse:nth-child(even) {
  background: hsl(220 20% 93%);
}

body:not(.simple-verse-style) .padas {
  list-style: none;
  margin: 0;
  padding: 0;
  display: grid;
  grid-template-columns: var(--left-col-width, 40%) 1fr;
  column-gap: 1rem;
  row-gap: .25rem;
}

body:not(.simple-verse-style) .padas > li:first-child {
  grid-column: 1;
  grid-row: 1 / -1;
}

body:not(.simple-verse-style) .padas > li:not(:first-child) {
  grid-column: 2;
}

.padas > li {
  line-height: 1.4;
}

input[type=range] {
  accent-color: #113121;
}

@media (max-width: 520px) {
  body:not(.simple-verse-style) .padas {
    grid-template-columns: 1fr;
  }

  body:not(.simple-verse-style) .padas > li {
    grid-column: 1 !important;
    grid-row: auto !important;
  }
}

body.simple-verse-style .verses {
  list-style-type: none;
  padding-left: 0;
}

body.simple-verse-style .verse {
  margin-bottom: 1.3em;
}

body.simple-verse-style .padas {
  list-style-type: none;
  padding-left: 0;
}

